force-app/main/default/objects/Job_Template__c/Job_Template__c.object-meta.xml
<CustomObject>
    <label>Job Template</label>
    <nameField>
        <displayFormat>JT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>