force-app/main/default/objects/Job_Template__c/fields/Active_Route_Days__c.field-meta.xml
<CustomField>
    <fullName>Active_Route_Days__c</fullName>
    <description>Days of the week the duty applies</description>
    <formula>IF(Route_Template__r.Monday__c,&quot;Mon &quot;,&quot;&quot;)+
IF(Route_Template__r.Tuesday__c,&quot;Tue &quot;,&quot;&quot;) + 
IF(Route_Template__r.Wednesday__c,&quot;Wed &quot;,&quot;&quot;) + 
IF(Route_Template__r.Thursday__c,&quot;Thu &quot;,&quot;&quot;) + 
IF(Route_Template__r.Friday__c,&quot;Fri &quot;,&quot;&quot;) + 
IF(Route_Template__r.Saturday__c,&quot;Sat &quot;,&quot;&quot;) +
IF(Route_Template__r.Sunday__c,&quot;Sun &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Duty Days</label>
    <type>Text</type>
</CustomField>