force-app/main/default/objects/Job_Template__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fit For Duty</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Delivery &amp; Collection</fullName>
                <default>true</default>
                <label>Delivery &amp; Collection</label>
            </value>
            <value>
                <fullName>Rest Break</fullName>
            </value>
            <value>
                <fullName>Prepare Vehicle</fullName>
            </value>
            <value>
                <fullName>Prepare Trailer</fullName>
            </value>
            <value>
                <fullName>Drop Trailer</fullName>
            </value>
            <value>
                <fullName>Return &amp; Refuel Vehicle</fullName>
            </value>
            <value>
                <fullName>Return Vehicle</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Work As Directed</fullName>
            </value>
            <value>
                <fullName>Clear Posting Box</fullName>
            </value>
            <value>
                <fullName>Collection &amp; Clearance</fullName>
            </value>
            <value>
                <fullName>Scheduled Task</fullName>
            </value>
            <value>
                <fullName>Supervisory</fullName>
            </value>
            <value>
                <fullName>Vehicle Servicing</fullName>
            </value>
            <value>
                <fullName>Unscheduled Task</fullName>
            </value>
            <value>
                <fullName>Delivery, Collection &amp; Clearance</fullName>
            </value>
            <value>
                <fullName>Delivery &amp; Clearance</fullName>
            </value>
            <value>
                <fullName>Unpaid Break</fullName>
            </value>
            <value>
                <fullName>Change Trailer</fullName>
                <isActive>false</isActive>
                <label>Change Trailer</label>
            </value>
            <value>
                <fullName>Handover Vehicle - Collect</fullName>
                <isActive>false</isActive>
                <label>Handover Vehicle - Collect (DO NOT USE)</label>
            </value>
            <value>
                <fullName>Handover Vehicle - Deliver</fullName>
                <isActive>false</isActive>
                <label>Handover Vehicle - Deliver (DO NOT USE)</label>
            </value>
            <value>
                <fullName>Handover Vehicle - Exchange</fullName>
                <isActive>false</isActive>
                <label>Handover Vehicle - Exchange (DO NOT USE)</label>
            </value>
            <value>
                <fullName>Meal Break Paid</fullName>
                <isActive>false</isActive>
                <label>Meal Break Paid</label>
            </value>
            <value>
                <fullName>Meal Break Unpaid</fullName>
                <isActive>false</isActive>
                <label>Meal Break Unpaid</label>
            </value>
            <value>
                <fullName>Parcel Delivery</fullName>
                <isActive>false</isActive>
                <label>Parcel Delivery</label>
            </value>
            <value>
                <fullName>Prepare Vehicle - Collect</fullName>
                <isActive>false</isActive>
                <label>Prepare Vehicle - Collect</label>
            </value>
            <value>
                <fullName>Prepare Vehicle - Interim</fullName>
                <isActive>false</isActive>
                <label>Prepare Vehicle - Interim</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>