force-app/main/default/objects/Job_Template__c/fields/Day_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Day_Start_Time__c</fullName>
    <description>Start Time with Next Day Job to allow sort to list Next Day Jobs at end</description>
    <formula>IF(Next_Day_Job__c, &apos;2&apos;,&apos;1&apos;) + &quot;-&quot; + IF(Len(Start_Time__c)&lt;4,&apos;0&apos; + Start_Time__c,Start_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Start Time</label>
    <type>Text</type>
</CustomField>