force-app/main/default/objects/Job_Template__c/fields/Dock_Number__c.field-meta.xml
<CustomField>
    <fullName>Dock_Number__c</fullName>
    <description>Dock number for the Job</description>
    <label>Dock Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>