force-app/main/default/objects/Job_Template__c/fields/Duty_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Duty_Entry_Id__c</fullName>
    <description>Legacy Duty Entry Id from TIS</description>
    <label>Duty Entry Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>