force-app/main/default/objects/Job_Template__c/fields/Duty_SR__c.field-meta.xml
<CustomField>
    <fullName>Duty_SR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AJ TDF Enhance: Created to allow Duty Assignment at the JT level.
The Duty Service Resource this Job Template is assigned to.
Work generated will be assigned to this Service Resource if specified, overriding the value set on the Duty Template.</description>
    <inlineHelpText>The Operational Duty this Job Template is assigned to.
Work generated will be assigned to this Duty if specified; overriding the value set on the Duty Template.
For Journal Templates Only.</inlineHelpText>
    <label>Operational Duty Override</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ServiceResource.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>ServiceResource.ResourceType</field>
            <operation>equals</operation>
            <value>C</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Job Templates</relationshipLabel>
    <relationshipName>Job_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>