force-app/main/default/objects/Job_Template__c/fields/Earliest_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Start_Time__c</fullName>
    <description>The earliest possible time the job can start</description>
    <label>Earliest Start Time</label>
    <length>4</length>
    <type>Text</type>
</CustomField>