force-app/main/default/objects/Job_Template__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>The date the Job Template is effective from</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>