force-app/main/default/objects/Job_Template__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>The date the Job Template is expires</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>