force-app/main/default/objects/Job_Template__c/fields/Friday__c.field-meta.xml
<CustomField>
    <fullName>Friday__c</fullName>
    <formula>Route_Template__r.Friday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>