force-app/main/default/objects/Job_Template__c/fields/Job_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Job_Instructions__c</fullName>
    <label>Job Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>