force-app/main/default/objects/Job_Template__c/fields/Latest_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Start_Time__c</fullName>
    <description>The latest time the job can end.</description>
    <label>Latest End Time</label>
    <length>4</length>
    <type>Text</type>
</CustomField>