force-app/main/default/objects/Job_Template__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>TDF Enhance: Added lookup filter</description>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Job Templates (Site)</relationshipLabel>
    <relationshipName>Booking_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>