force-app/main/default/objects/Job_Template__c/fields/Location_Details__c.field-meta.xml
<CustomField>
    <fullName>Location_Details__c</fullName>
    <formula>Location__r.Name + BR() + 
Location__r.Street__c  + BR() + 
Location__r.City__c</formula>
    <label>Location Details</label>
    <type>Text</type>
</CustomField>