force-app/main/default/objects/Job_Template__c/fields/Monday__c.field-meta.xml
<CustomField>
    <fullName>Monday__c</fullName>
    <formula>Route_Template__r.Monday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>