force-app/main/default/objects/Job_Template__c/fields/Route_Template__c.field-meta.xml
<CustomField>
    <fullName>Route_Template__c</fullName>
    <label>Duty Template</label>
    <referenceTo>Route_Template__c</referenceTo>
    <relationshipLabel>Job Templates</relationshipLabel>
    <relationshipName>Job_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>