force-app/main/default/objects/Job_Template__c/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <formula>Route_Template__r.Saturday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>