force-app/main/default/objects/Job_Template__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Arrival time in 24hr clock format</description>
    <label>Start Time</label>
    <length>4</length>
    <type>Text</type>
</CustomField>