force-app/main/default/objects/Job_Template__c/fields/Sunday__c.field-meta.xml
<CustomField>
    <fullName>Sunday__c</fullName>
    <formula>Route_Template__r.Sunday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>