force-app/main/default/objects/Job_Template__c/fields/Thursday__c.field-meta.xml
<CustomField>
    <fullName>Thursday__c</fullName>
    <formula>Route_Template__r.Thursday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thursday</label>
    <type>Checkbox</type>
</CustomField>