force-app/main/default/objects/Job_Template__c/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <formula>Route_Template__r.Tuesday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>