force-app/main/default/objects/Job_Template__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <formula>Route_Template__r.Wednesday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>