force-app/main/default/objects/Job_Template__c/validationRules/ActType_Site_Start_Duration_required.validationRule-meta.xml
<ValidationRule>
    <fullName>ActType_Site_Start_Duration_required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 Location__c = null,
 Start_Time__c = null,
 ISPICKVAL(Duration__c, &apos;&apos;),
 ISPICKVAL(Activity_Type__c ,&apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Activity Type, Site, Start Time and Duration are required for Job Template.</errorMessage>
</ValidationRule>