force-app/main/default/objects/Job_Template__c/validationRules/latest_end_time_less_than_2400.validationRule-meta.xml
<ValidationRule>
    <fullName>latest_end_time_less_than_2400</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    NOT(ISBLANK(Latest_Start_Time__c)), 
    OR( 
        NOT(ISNUMBER(Latest_Start_Time__c)), 
        LEN(Latest_Start_Time__c) &lt; 3, 
        VALUE(Latest_Start_Time__c) &lt; 0, 
        VALUE(Latest_Start_Time__c) &gt; 2400,
        VALUE(RIGHT(Latest_Start_Time__c,2)) &gt; 59 
    ) 
)</errorConditionFormula>
    <errorDisplayField>Latest_Start_Time__c</errorDisplayField>
    <errorMessage>Latest End Time must be number and between 0000 and 2400</errorMessage>
</ValidationRule>