force-app/main/default/objects/Job_Template__c/listViews/Adhoc_Jobs.listView-meta.xml
<ListView>
    <fullName>Adhoc_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Route_Template__c</columns>
    <columns>Location__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>equals</operation>
        <value>Dandenong</value>
    </filters>
    <filters>
        <field>Route_Template__c</field>
        <operation>contains</operation>
        <value>Adhoc</value>
    </filters>
    <label>DTF Adhoc Jobs</label>
</ListView>