force-app/main/default/objects/Job_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Route_Template__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Location__c</columns>
    <columns>Active_Route_Days__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Job_Instructions__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Duration__c</columns>
    <columns>Duty_Template_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Duty_Template_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All</label>
</ListView>