force-app/main/default/objects/Job_Template__c/listViews/JT_Requested_ULD_Qty.listView-meta.xml
<ListView>
    <fullName>JT_Requested_ULD_Qty</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Node_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>JT Requested ULD Qty</label>
</ListView>