force-app/main/default/objects/Job_Template__c/listViews/My_Edit_View1.listView-meta.xml
<ListView>
    <fullName>My_Edit_View1</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Next_Day_Job__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Duration__c</columns>
    <columns>Dock_Number__c</columns>
    <columns>Job_Instructions__c</columns>
    <columns>Day_Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Route_Template__c</field>
        <operation>contains</operation>
        <value>MTF To My Chemist Preston S&amp;D Tue - Fri</value>
    </filters>
    <label>My Edit View</label>
</ListView>