force-app/main/default/objects/Job_Template__c/listViews/SA_Transport.listView-meta.xml
<ListView>
    <fullName>SA_Transport</fullName>
    <columns>Route_Template__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Location__c</columns>
    <columns>Active_Route_Days__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Job_Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>equals</operation>
        <value>SA Transport</value>
    </filters>
    <label>SA Transport</label>
</ListView>