force-app/main/default/objects/Job_Template__c/listViews/time_zone.listView-meta.xml
<ListView>
    <fullName>time_zone</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>time zone</label>
</ListView>