force-app/main/default/objects/Job_Template__c/listViews/Underwood_JT.listView-meta.xml
<ListView>
    <fullName>Underwood_JT</fullName>
    <columns>NAME</columns>
    <columns>Route_Template__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Location__c</columns>
    <columns>Active_Route_Days__c</columns>
    <columns>Activity_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>equals</operation>
        <value>Northgate</value>
    </filters>
    <filters>
        <field>Activity_Type__c</field>
        <operation>notContain</operation>
        <value>Fit For Duty,Meal Break,Prepare Vehicle,Prepare Trailer,Drop Trailer,Return &amp; Refuel Vehicle,Return Vehicle,Training,Work As Directed,Supervisory,Vehicle Servicing</value>
    </filters>
    <label>Job Template Filtered List</label>
</ListView>